# insight-ai-api

./: .checkov.yml  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mega-linter.yml  .pre-commit-config.yaml  .pylintrc  Containerfile  Dockerfile  Makefile  README.md  deploy.sh  dev-requirements.in  dev-requirements.txt  fly.toml  local.in  main.py  opauth.sh  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  test_app.py
.github/workflows/: mega-linter.yml
app/: .dockerignore  Containerfile  Dockerfile  Makefile  dev-requirements.txt  fly.production.toml  fly.staging.toml  fly.toml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
app/requirements/: base.txt  dev.txt  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.txt  test.in  test.txt
app/routers/: facts.py  poems.py  translate.py
app/tests/: test_facts.py  test_main.py  test_translate.py
cli/: dev-requirements.txt  main.py  requirements_cli.txt
facts/: facts.py
frontend/: .dockerignore  .gitignore  Dockerfile  fe-requirements.in  fe-requirements.txt  fly.toml  login.py  pyproject.toml  requirements-frontend.txt  requirements_frontend.txt  start_streamlit.sh
frontend/pages/: 1_Home.py  2_Translate.py
frontend/requirements/: requirements-frontend.in
tests/: test_facts.py  test_main.py  test_translate.py
translate/: translate.py
