[project]
name = "insight-ai-api"
version = "0.3.0"
requires-python = ">=3.12"
authors = [
  { name = "John Dutchover", email = "johndutchover@users.noreply.github.com" },
]
description = "Insight AI application with API and frontend."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.submodule1]
path = "app"

[tool.hatch.envs.submodule2]
path = "frontend"

[tool.pixi.workspace]
requires-pixi = ">=0.46"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
app = { path = "./app", editable = true }
frontend = { path = "./frontend", editable = true }

[tool.pixi.feature.api.dependencies]
uvicorn = "*"
httpx = "*"
pydantic-settings = "*"
types-requests = "*"

[tool.pixi.feature.lint.dependencies]
black = "*"
flake8 = "*"
pre-commit = ">=4.2.0,<5"

[tool.pixi.feature.test.dependencies]
black = ">=25.1.0,<26"
flake8 = ">=7.2.0,<8"
mock = ">=5.2.0,<6"
pytest = ">=8.3.5,<9"
pytest-cov = ">=6.1.1,<7"

[dependency-groups]
api = ["uvicorn", "fastapi>=0.115.6,<0.116", "marvin>=2.3.8,<3"]
frontend = [
  "streamlit",
  "python-dotenv",
  "requests",
  "watchdog",
  "importlib-metadata",
  "streamlit-extras>=0.1.5,<0.2",
]

[tool.pixi.environments]
default = { features = ["api", "frontend", "lint"], solve-group = "default" }
prod = { features = ["api", "lint"], solve-group = "default" }
dev = { features = ["api", "frontend", "lint"], solve-group = "default" }
full = { features = [
  "api",
  "frontend",
  "lint",
  "test",
], solve-group = "default" }

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.8,<0.0.9"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B105"]
skips = ["B101", "B104"]
