[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "frontend"
authors = [
  { name = "John Dutchover", email = "1983909-johndutchover@users.noreply.gitlab.com" },
]
description = "Frontend for insight-ai-api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  'importlib-metadata; python_version<"3.12"',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements-frontend.in"] }
