[project]
name = "frontend"
version = "0.3.0"
requires-python = ">=3.12"
authors = [
  { name = "John Dutchover", email = "johndutchover@users.noreply.github.com" },
]
description = "Frontend for insight-ai"
dependencies = ["streamlit-extras"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frontend"]

[tool.pixi.workspace]
requires-pixi = ">=0.46"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.feature.frontend.dependencies]
streamlit = "*"
python-dotenv = "*"
requests = "*"
watchdog = "*"
importlib-metadata = "*"

[tool.pixi.pypi-dependencies]
marvin = ">=3.0.2, <4"

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = "*"

[tool.pixi.feature.lint.dependencies]
black = ">=25.1.0,<26"
flake8 = ">=7.2.0,<8"
pre-commit = ">=4.2.0,<5"

[tool.pixi.feature.test.dependencies]
black = ">=25.1.0,<26"
flake8 = ">=7.2.0,<8"
mock = ">=5.2.0,<6"
pytest = ">=8.3.5,<9"
pytest-cov = ">=6.1.1,<7"

[tool.pixi.environments]
default = ["frontend", "lint", "test", "dev"]
prod = ["frontend", "lint"]
lint = ["lint"]
test = ["test"]
dev = ["dev"]

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.8,<0.0.9"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B105"]
skips = ["B101", "B104"]
